@@ -227,7 +227,7 @@ __glXDRIcontextDestroy(__GLXcontext *baseContext)
     context->driContext.destroyContext(NULL,
 				       context->base.pScreen->myNum,
 				       context->driContext.private);
-    __glXContextDestroy(context);
+    __glXContextDestroy(&context->base);
     xfree(context);
 }
 
